--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
   },
